# IPL_Google_Cloud

./: .env.example  .gitignore  COPILOT.md  Dockerfile  README.md  SYSTEM_PROMPT.md  deploy-simple.ps1  deploy.ps1  docker-compose.yml  firebase.json  main.py  prometheus.yml  pyproject.toml  requirements.txt  test_dynamic_data.py  train_ml_model.py
.github/workflows/: ci-cd.yml
docs/: ACCESSIBILITY_GUIDE.txt  Copilot_Instructions.md  DEPLOYMENT.md  DYNAMIC_DATA_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_CHECKLIST.md  Problem_statement.md  flow.txt
ipl_agentic_coach/: README.md
ipl_agentic_coach/ai_agents/: agentic_pipeline.py  fan_decision_agent.py  historical_evaluator_agent.py  langchain_pipeline.py  langgraph_workflow.py  scoring_agent.py  simulator_agent.py
ipl_agentic_coach/backend/app/: ai_service.py  auth.py  config.py  cricket_data_service.py  crud.py  database.py  firebase_auth.py  logging_config.py  main.py  middleware.py  ml_model.py  models.py  pagination.py  runtime_controls.py  schemas.py  sentry_config.py
ipl_agentic_coach/backend/app/routers/: admin.py  analytics.py  (+5 more)
ipl_agentic_coach/data/: batsman_bowler_matchups.json  field_effectiveness.json  ipl_bowler_stats.json  load_kaggle_data.py
ipl_agentic_coach/data/models/: tactical_score_metrics.json  tactical_score_model.joblib
ipl_agentic_coach/frontend/: dashboard.html  index.html
ipl_agentic_coach/frontend/css/: styles.css
ipl_agentic_coach/frontend/js/: dashboard.js
ipl_agentic_coach/utils/: analytics.py  visualizations.py
skeleton/: folder_builder.py
tests/: test_api.py
