[project]
name = "ipl-google-cloud"
version = "0.1.0"
description = "IPL Agentic AI Coaching Simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "firebase-admin>=6.5.0",
    "google-generativeai>=0.8.0",
    "joblib>=1.4.0",
    "kaleido>=0.2.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "pydantic>=2.10.0",
    "scikit-learn>=1.5.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.46.0",
]
